syntax = "proto3";
import "Grpc/Protos/Api/Annotations.proto";
import "Grpc/Protos/Contracts/Email.proto";

option csharp_namespace = "Grpc.Services";

service EmailService {
  rpc Send (GrpcSendEmailRequest) returns (GrpcEmailResponse) {
    option (google.api.http) = {
      post: "/grpc/send"
    };
  }
  rpc SendTemplated (GrpcSendTemplatedEmailRequest) returns (GrpcEmailResponse)
  {
    option (google.api.http) = {
      post: "/grpc/sendTemplated"
    };
  }
}